--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@hugeicons/react": "^1.1.1",
+    "bootstrap": "^5.3.8",
+    "fontawesome": "^5.6.3",
+    "next": "15.5.4",
     "react": "19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-icons": "^5.5.0"
   }
 }
