--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hugeicons/react": "^1.1.1",
     "bootstrap": "^5.3.8",
     "fontawesome": "^5.6.3",
+    "framer-motion": "^12.23.22",
     "next": "15.5.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
